topic for mcpaspao

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -18,35 +18,35 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-#[program:topicOrderService]
-#user=root
-#directory=/
-#stdout_logfile=/dev/fd/1
-#stdout_logfile_maxbytes=0
-#redirect_stderr=true
-#command=/kafka_2.12-2.3.0/bin/kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic orderservice
+[program:topicOrderService]
+user=root
+directory=/
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+command=/kafka_2.12-2.3.0/bin/kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic orderservice
 
-#[program:topicKitchenService]
-#user=root
-#directory=/
-#stdout_logfile=/dev/fd/1
-#stdout_logfile_maxbytes=0
-#redirect_stderr=true
-#command=/kafka_2.12-2.3.0/bin/kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic kitchenservice
+[program:topicKitchenService]
+user=root
+directory=/
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+command=/kafka_2.12-2.3.0/bin/kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic kitchenservice
 
-#[program:topicDeliveryService]
-#user=root
-#directory=/
-#stdout_logfile=/dev/fd/1
-#stdout_logfile_maxbytes=0
-#redirect_stderr=true
-#command=/kafka_2.12-2.3.0/bin/kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic deliveryservice
+[program:topicDeliveryService]
+user=root
+directory=/
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+command=/kafka_2.12-2.3.0/bin/kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic deliveryservice
 
 
-#[program:topicOrderServiceCallback]
-#user=root
-#directory=/
-#stdout_logfile=/dev/fd/1
-#stdout_logfile_maxbytes=0
-#redirect_stderr=true
-#command=/kafka_2.12-2.3.0/bin/kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic orderservicecallback
+[program:topicOrderServiceCallback]
+user=root
+directory=/
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+command=/kafka_2.12-2.3.0/bin/kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic orderservicecallback
